--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
     /* Side Navigation */
     .nav-toggle {
       position: fixed;
-      top: 30px;
-      left: 30px;
+      top: 20px;
+      left: 20px;
       z-index: 1001;
       background: rgba(255,255,255,0.1);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255,255,255,0.2);
       border-radius: 12px;
       color: white;
-      font-size: 1.5rem;
-      padding: 12px 16px;
+      font-size: 1.2rem;
+      padding: 5px 8px;
       cursor: pointer;
       transition: all 0.3s ease;
     }
@@ -411,7 +411,7 @@
     
     /* Sections */
     .section {
-      padding: 80px 20px;
+      padding: 40px 20px;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -769,16 +769,16 @@
         <h1>Nabila Bilkis Shova</h1>
         <p class="subtitle" style="margin-top: -2%;">Software Engineer | Researcher | Tech Enthusiast</p>
         <div class="contact-links">
-          <a href="mailto:your.email@example.com" class="contact-link" title="Email">
+          <a href="mailto:shovanabila@gmail.com" class="contact-link" title="Email">
             <i class="fas fa-envelope"></i>
           </a>
-          <a href="tel:+1234567890" class="contact-link" title="Phone">
+          <a href="tel:+8801688263892" class="contact-link" title="Phone">
             <i class="fas fa-phone"></i>
           </a>
-          <a href="https://linkedin.com/in/yourprofile" class="contact-link" title="LinkedIn" target="_blank">
+          <a href="https://linkedin.com/in/nabila-b-shova" class="contact-link" title="LinkedIn" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://facebook.com/yourprofile" class="contact-link" title="Facebook" target="_blank">
+          <a href="https://facebook.com/nabila.shova" class="contact-link" title="Facebook" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
         </div>
@@ -808,9 +808,10 @@
         </div>
         <h3>Education</h3>
         <ul>
-          <li>BSc in Computer Science & Engineering – CGPA 3.74</li>
-          <li>MSc in Computer Science & Engineering – CGPA 3.69</li>
-          <li>Undergraduate Teaching Assistant</li>
+          <li>MSc. in Computer Science & Engineering – CGPA 3.69/4.00</li>
+          <li>BSc. in Computer Science & Engineering – CGPA 3.74/4.00</li>          
+          <li>H.S.C [Major: Science] – GPA 5.00/5.00</li>
+          <li>S.S.C [Major: Science] – GPA 5.00/5.00</li>
         </ul>
       </div>
       <div class="card animate-in">
@@ -819,9 +820,11 @@
         </div>
         <h3>Teaching Experience</h3>
         <ul>
-          <li>Undergraduate Teaching Assistant</li>
-          <li>Mentored students in programming</li>
-          <li>Conducted lab sessions</li>
+          <li>Graduate Teaching Assistant <span style="margin-left: 25%; font-size: 12px;">[May'19 ~ Jun'19]</span></li>
+          <li>Undergraduate Teaching Assistant <span style="margin-left: 16%; font-size: 12px;">[Jan'17 ~ Apr'19]</span></li>
+          <span style="padding-left: 10%;">🎯 Prepared course materials & graded assignments</span><br>
+          <span style="padding-left: 10%;">🎯 Conducted lab sessions & mentored students</span><br>
+          <span style="padding-left: 10%;">🎯 Helped students with course-work & problem-solving</span>
         </ul>
       </div>
       </div>
@@ -847,7 +850,7 @@
         <div class="card-icon">
           <i class="fas fa-lightbulb"></i>
         </div>
-        <h3>Innovation & Patents</h3>
+        <h3>Innovation & Leadership</h3>
         <ul>
           <li>TWS Technology Patent</li>
           <li>Emergency Chatbot System Patent</li>
