--- a/index.html
+++ b/index.html
@@ -868,10 +868,10 @@
       <div class="slider" id="certSlider">
         <div class="slider-track">
           <div class="slider-item">
-            <img src="https://via.placeholder.com/600x400/667eea/ffffff?text=Certificate+1" alt="Certificate 1">
+            <img src="bsc_scholarship.jpg" alt="Certificate 1">
           </div>
           <div class="slider-item">
-            <img src="https://via.placeholder.com/600x400/764ba2/ffffff?text=Certificate+2" alt="Certificate 2">
+            <img src="copc_certificate.jpg" alt="Certificate 2">
           </div>
           <div class="slider-item">
             <img src="https://via.placeholder.com/600x400/f093fb/ffffff?text=Certificate+3" alt="Certificate 3">
@@ -893,10 +893,10 @@
       <div class="slider" id="awardSlider">
         <div class="slider-track">
           <div class="slider-item">
-            <img src="https://via.placeholder.com/600x400/f5576c/ffffff?text=Award+1" alt="Award 1">
+            <img src="icon2.jpg" alt="Award 1">
           </div>
           <div class="slider-item">
-            <img src="https://via.placeholder.com/600x400/667eea/ffffff?text=Award+2" alt="Award 2">
+            <img src="excellence.jpg" alt="Award 2">
           </div>
           <div class="slider-item">
             <img src="https://via.placeholder.com/600x400/764ba2/ffffff?text=Award+3" alt="Award 3">
@@ -918,7 +918,7 @@
       <div class="contact-info">
         <div class="contact-item">
           <i class="fas fa-envelope"></i>
-          <span>your.email@example.com</span>
+          <span>shovanabila@gmail.com</span>
         </div>
         <div class="contact-item">
           <i class="fab fa-linkedin"></i>
