--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
     }
 
     .skill-badge {
-      background: linear-gradient(45deg, #f093fb, #f5576c);
+      background: linear-gradient(45deg, #cc93fb, #ae57f5);
       color: white;
       padding: 6px 10px;
       border-radius: 999px;
@@ -1080,8 +1080,8 @@
         </div>
         <h3>Teaching Experience</h3>
         <ul>
-          <li>Graduate Teaching Assistant <span style="margin-left: 20%; font-size: 12px;">[May'19 ~ Jun'19]</span></li>
-          <li>Undergraduate Teaching Assistant <span style="margin-left: 12%; font-size: 12px;">[Jan'17 ~ Apr'19]</span></li>
+          <li>Teaching Assistant <span class="edu-duration-inline">2012 — 2014</span></li>
+          <!-- <li>Undergraduate Teaching Assistant <span style="margin-left: 12%; font-size: 12px;">[Jan'17 ~ Apr'19]</span></li> -->
           <span style="padding-left: 10%; font-size: 14px;">🎯 Prepared course materials &amp; graded assignments</span><br>
           <span style="padding-left: 10%; font-size: 14px;">🎯 Conducted lab sessions &amp; mentored students</span><br>
           <span style="padding-left: 10%; font-size: 14px;">🎯 Helped students with course-work &amp; problem-solving</span>
@@ -1098,12 +1098,12 @@
         </div>
         <h3>Development Expertise</h3>
         <ul>
-          <li>Software Engineer with five years of experience at Samsung Electronics</li>
-          <li>Expertise in machine learning, data analytics, and software development</li>
-          <li>Full-stack developer with strong analytical and problem-solving skills</li>
-          <li>Hands-on experience in applying advanced algorithms to optimize efficiency and system performance</li>
-          <li>Design &amp; develop advanced web applications using Laravel, CodeIgniter, PHP, JavaScript &amp; MySQL</li>
-          <li>Build prototypes with efficient database &amp; UI design and query optimization for cost-effective solutions</li>
+          <li>Software Engineer with five years of experience at <a href="https://research.samsung.com/srbd" style="text-decoration: none; font-style: italic;">Samsung Electronics</a></li>
+          <li>Expertise in ML, Data Analytics, and Full-stack SW Development with strong analytical and problem-solving skills</li>
+          <!-- <li>Full-stack developer with strong analytical and problem-solving skills</li> -->
+           <li>Design &amp; develop advanced web applications using Laravel, CodeIgniter, PHP, JavaScript &amp; MySQL</li>
+          <!-- <li>Hands-on experience in applying advanced algorithms to optimize efficiency and system performance</li>           -->
+          <li>Build prototypes with efficient DB &amp; UI design and query optimization for cost-effective solutions</li>
           <li>Data analysis with ML models and graphical interface design for engaging &amp; effective data visualization</li>
           <li>Continuous integration, XSS mitigation and troubleshooting critical issues for system security and performance optimization</li>
         </ul>
@@ -1114,9 +1114,9 @@
         </div>
         <h3>Innovation & Leadership</h3>
         <ul>
+          <li>Passionate about Innovation and creating intelligent, data-driven solutions</li>
           <li>Skilled in leading teams, managing projects, and driving organizational success</li>
-          <li>Strong presentation and communication skills, developed as a Teaching Assistant &amp; Project Coordinator</li>
-          <li>Passionate about innovation and creating intelligent, data-driven solutions</li>
+          <li>Strong presentation and communication skills, developed as a Teaching Assistant &amp; Project Coordinator</li>          
           <li>Delivered technology innovation projects and contributed to research publications</li>
           <li>Database design, middleware design and maintenance support for automation tools</li>
           <li>Designed &amp; implemented attractive UI and prepared project documentation</li>
@@ -1200,9 +1200,9 @@
         <h3>Competitive Programming</h3>
         <ul>
           <li>Solved 300+ problems across platforms.</li>
-          <li>LeetCode: <a href="https://leetcode.com/u/shova231/" target="_blank" style="color: #f093fb; text-decoration: none;">shova231</a></li>
-          <li>HackerRank: <a href="https://www.hackerrank.com/profile/nabilashova" target="_blank" style="color: #f093fb; text-decoration: none;">nabilashova</a></li>
-          <li>UVA Online Judge: <a href="https://uhunt.onlinejudge.org/id/697793" target="_blank" style="color: #f093fb; text-decoration: none;">Nabila Shova</a></li>
+          <li>LeetCode: <a href="https://leetcode.com/u/shova231/" target="_blank" style="color: #1a327e; text-decoration: none; font-style: italic; font-weight: bold;">shova231</a></li>
+          <li>HackerRank: <a href="https://www.hackerrank.com/profile/nabilashova" target="_blank" style="color: #1a327e; text-decoration: none; font-style: italic; font-weight: bold;">nabilashova</a></li>
+          <li>UVA Online Judge: <a href="https://uhunt.onlinejudge.org/id/697793" target="_blank" style="color: #1a327e; text-decoration: none; font-style: italic; font-weight: bold;">Nabila Shova</a></li>
         </ul>
       </div>
     </div>
@@ -1341,9 +1341,9 @@
         </div>
         <h3>Extra Curricular Activities</h3>
         <ul>
-          <li>Member, Programming Club — led study groups and coding challenges</li>
-          <li>Volunteer, Community Blood Donation Drives</li>
-          <li>Peer Mentor — supported undergraduate students with coursework</li>
+          <li>Member, Sports Club — Played Badminton as a regular member</li>
+          <li>Senior Executive, Programming Club — led study groups, training camps and coding contests</li>          
+          <li>Coordinator, Arts Club [Dance Floor] — Performed classical &amp; freestyle dance in multiple cultural events</li>
         </ul>
       </div>
     </div>
