--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
   <!-- Side Navigation -->
   <nav class="sidebar" id="sidebar">
     <div class="sidebar-header">
-      <img src="profile.jpg" alt="Nabila Bilkis Shova" class="sidebar-profile">
+      <img src="assets/profile.jpg" alt="Nabila Bilkis Shova" class="sidebar-profile">
       <h3 class="sidebar-title">Nabila Bilkis Shova</h3>
       <p class="sidebar-subtitle">Software Engineer</p>
     </div>
@@ -1011,7 +1011,7 @@
     <!-- Hero Section -->
     <section class="hero">
       <div class="hero-content">
-        <img src="profile.jpg" alt="Nabila Bilkis Shova" class="profile-image">
+        <img src="assets/profile.jpg" alt="Nabila Bilkis Shova" class="profile-image">
         <h1>Nabila Bilkis Shova</h1>
         <p class="subtitle" style="margin-top: -2%;">Software Engineer | Researcher | Tech Enthusiast</p>
         <div class="contact-links">
@@ -1060,8 +1060,8 @@
           <li class="education-item">
             <div class="edu-left">
               <div class="edu-institution">East West University</div>
-              <div class="edu-sub">MSc. in CSE- <span style="font-style: italic;">CGPA: 3.69/4.00</span><span class="edu-duration-inline">2019 — 2021</span></div>
-              <div class="edu-sub">BSc. in CSE- <span style="font-style: italic;">CGPA: 3.74/4.00</span><span class="edu-duration-inline">2013 — 2017</span></div>
+              <div class="edu-sub">MSc. in CSE- <span style="font-style: italic;">CGPA: 3.69/4.00</span><span class="edu-duration-inline">2022 — 2024</span></div>
+              <div class="edu-sub">BSc. in CSE- <span style="font-style: italic;">CGPA: 3.74/4.00</span><span class="edu-duration-inline">2015 — 2019</span></div>
             </div>
           </li>
 
@@ -1079,12 +1079,22 @@
           <i class="fas fa-chalkboard-teacher"></i>
         </div>
         <h3>Teaching Experience</h3>
-        <ul>
-          <li>Teaching Assistant <span class="edu-duration-inline">2012 — 2014</span></li>
-          <!-- <li>Undergraduate Teaching Assistant <span style="margin-left: 12%; font-size: 12px;">[Jan'17 ~ Apr'19]</span></li> -->
-          <span style="padding-left: 10%; font-size: 14px;">🎯 Prepared course materials &amp; graded assignments</span><br>
-          <span style="padding-left: 10%; font-size: 14px;">🎯 Conducted lab sessions &amp; mentored students</span><br>
-          <span style="padding-left: 10%; font-size: 14px;">🎯 Helped students with course-work &amp; problem-solving</span>
+        <ul class="education-list">
+          <li class="education-item">
+            <div class="edu-left">
+              <div class="edu-institution">Teaching Assistant<span class="edu-duration-inline">2017 — 2019</span></div>
+              <div class="edu-sub">Prepared course materials & graded assignments</div>
+              <div class="edu-sub">Conducted lab sessions & mentored students</div>
+            </div>
+          </li>
+
+          <li class="education-item">
+            <div class="edu-left">
+              <div class="edu-institution">Instructor, Junior Software Academy<span class="edu-duration-inline">2020 — Ongoing</span></div>
+              <div class="edu-sub">Conducted basic coding classes (C language) for children</div>
+              <div class="edu-sub">Arranged interactive coding lessons and contests</div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -1098,14 +1108,13 @@
         </div>
         <h3>Development Expertise</h3>
         <ul>
-          <li>Software Engineer with five years of experience at <a href="https://research.samsung.com/srbd" style="text-decoration: none; font-style: italic;">Samsung Electronics</a></li>
-          <li>Expertise in ML, Data Analytics, and Full-stack SW Development with strong analytical and problem-solving skills</li>
+          <li>Software Engineer with 5 years of experience at <a href="https://research.samsung.com/srbd" style="text-decoration: none; font-style: italic;" target="_blank">Samsung Electronics</a>, delivering scalable and innovative SW solutions</li>
+          <li>Expert in Machine Learning, Data Analytics, and Full-Stack Development with strong problem-solving skills</li>
           <!-- <li>Full-stack developer with strong analytical and problem-solving skills</li> -->
-           <li>Design &amp; develop advanced web applications using Laravel, CodeIgniter, PHP, JavaScript &amp; MySQL</li>
-          <!-- <li>Hands-on experience in applying advanced algorithms to optimize efficiency and system performance</li>           -->
-          <li>Build prototypes with efficient DB &amp; UI design and query optimization for cost-effective solutions</li>
-          <li>Data analysis with ML models and graphical interface design for engaging &amp; effective data visualization</li>
-          <li>Continuous integration, XSS mitigation and troubleshooting critical issues for system security and performance optimization</li>
+           <li>Designed and developed advanced web applications using Laravel, CodeIgniter, PHP, JavaScript, and MySQL</li>
+          <li>Skilled in building prototypes with optimized database and UI design, ensuring cost-effective and efficient solutions</li>
+          <li>Applied ML models for data analysis and developed intuitive graphical interfaces for effective data visualization</li>
+          <li>Enhanced system performance and security through CI/CD integration, XSS mitigation, and resolution of critical issues</li>
         </ul>
       </div>
       <div class="card animate-in">
@@ -1115,11 +1124,11 @@
         <h3>Innovation & Leadership</h3>
         <ul>
           <li>Passionate about Innovation and creating intelligent, data-driven solutions</li>
-          <li>Skilled in leading teams, managing projects, and driving organizational success</li>
-          <li>Strong presentation and communication skills, developed as a Teaching Assistant &amp; Project Coordinator</li>          
-          <li>Delivered technology innovation projects and contributed to research publications</li>
-          <li>Database design, middleware design and maintenance support for automation tools</li>
-          <li>Designed &amp; implemented attractive UI and prepared project documentation</li>
+          <li>Developed automated solutions to streamline critical task management process</li>
+          <li>Led a cross-functional team to design and deliver innovative SW solutions within tight deadlines</li>
+          <li>Proven ability to adapt and thrive in fast-paced, dynamic IT industry</li>
+          <li>Strong presentation and communication skills, developed as a Teaching Assistant &amp; Project Coordinator</li> 
+          <li>Skilled in leading teams, managing projects, and driving organizational success</li>        
         </ul>
       </div>
       </div>
@@ -1193,6 +1202,7 @@
         <div class="skill-badges">
           <span class="skill-badge">Linux</span>
           <span class="skill-badge">Docker (Basic)</span>
+          <span class="skill-badge">Microsoft Office</span>
         </div>
       </div>
       <div class="card animate-in">
@@ -1219,26 +1229,26 @@
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="bsc_scholarship.jpg" alt="Certificate 1">
-                <div class="slide-caption">BSc Scholarship</div>
+                <img src="assets/certificates/bsc_scholarship.jpg" alt="Certificate 1">
+                <div class="slide-caption">Bachelors Merit Scholarship</div>
               </div>
-              <div class="slide-desc">Awarded full tuition scholarship for outstanding academic performance during BSc program.</div>
+              <div class="slide-desc">Awarded 100% Merit Scholarship for outstanding academic performance during BSc program.</div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="copc_certificate.jpg" alt="Certificate 2">
-                <div class="slide-caption">COPC Certification</div>
+                <img src="assets/certificates/copc_certificate.jpg" alt="Certificate 2">
+                <div class="slide-caption">COPC Certificate</div>
               </div>
-              <div class="slide-desc">Completed the COPC certification showcasing process improvement knowledge.</div>
+              <div class="slide-desc">Awarded a certificate for securing 4th place in the “War of Beginner and Intermediate Programmers” coding contest.</div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="reactjs.jpeg" alt="Certificate 3">
-                <div class="slide-caption">React.js Course</div>
+                <img src="assets/certificates/reactjs.jpeg" alt="Certificate 3">
+                <div class="slide-caption">React.js Training</div>
               </div>
               <div class="slide-desc">Hands-on course on modern React patterns and hooks for building web UIs.</div>
             </div>
@@ -1246,7 +1256,7 @@
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="js.jpeg" alt="Certificate 4">
+                <img src="assets/certificates/js.jpeg" alt="Certificate 4">
                 <div class="slide-caption">JavaScript Mastery</div>
               </div>
               <div class="slide-desc">Advanced JavaScript training covering ES6+, asynchronous programming, and tooling.</div>
@@ -1255,7 +1265,7 @@
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="pm.jpeg" alt="Certificate 5">
+                <img src="assets/certificates/pm.jpeg" alt="Certificate 5">
                 <div class="slide-caption">Project Management</div>
               </div>
               <div class="slide-desc">Project management fundamentals with practical frameworks for delivery and team leadership.</div>
@@ -1285,19 +1295,19 @@
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="icon2.jpg" alt="Award 1">
+                <img src="assets/awards/icon2.jpg" alt="Award 1">
                 <div class="slide-caption">Icon Award</div>
               </div>
-              <div class="slide-desc">Recognized for outstanding contribution to the university technology community.</div>
+              <div class="slide-desc">Received Icon Award for exceptional performance and contributions to the company.</div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="excellence.jpg" alt="Award 2">
+                <img src="assets/awards/excellence.jpg" alt="Award 2">
                 <div class="slide-caption">Excellence Award</div>
               </div>
-              <div class="slide-desc">Award for academic and extracurricular excellence.</div>
+              <div class="slide-desc">Recognized for exceptional performance and contributions to the company from July ~ December 2024.</div>
             </div>
           </div>
           <div class="slider-item">
@@ -1325,25 +1335,25 @@
     <div class="card-grid">
       <div class="card animate-in">
         <div class="card-icon">
-          <i class="fas fa-hands-helping"></i>
+          <i class="fas fa-users"></i>
         </div>
-        <h3>Volunteer Work</h3>
+        <h3>Extra Curricular Activities</h3>
         <ul>
-          <li>Mentor — Local coding bootcamps & community workshops (2022–Present)</li>
-          <li>Volunteer, Women's Tech Workshops — organized sessions and materials (2021–2023)</li>
-          <li>Organizer, University Hackathon — coordinated logistics & mentoring (2018)</li>
+          <li>Senior Executive, Programming Club — led study groups, training camps and coding contests</li>
+          <li>Member, Sports Club — Active Badminton Player </li>          
+          <li>Coordinator, Arts Club [Dance Floor] — Performed classical &amp; freestyle dance in multiple cultural events</li>
         </ul>
       </div>
 
       <div class="card animate-in">
         <div class="card-icon">
-          <i class="fas fa-users"></i>
+          <i class="fas fa-hands-helping"></i>
         </div>
-        <h3>Extra Curricular Activities</h3>
+        <h3>Volunteer Work</h3>
         <ul>
-          <li>Member, Sports Club — Played Badminton as a regular member</li>
-          <li>Senior Executive, Programming Club — led study groups, training camps and coding contests</li>          
-          <li>Coordinator, Arts Club [Dance Floor] — Performed classical &amp; freestyle dance in multiple cultural events</li>
+          <li>Member, Blood Donation Camp — engaged in awareness and donation activities</li>
+          <li>Volunteer, Women's Tech Workshops and Hackathon</li>
+          <li>Organizer, <a href="https://research.samsung.com/news/Enabling-Underprivileged-Children-through-IT-Education-at-Samsung-R-D-Institute-Bangladesh" style="text-decoration: none; font-style: italic;" target="_blank">Junior Software Academy</a> — CSR initiative to deliver basic IT education to underprivileged students</li>
         </ul>
       </div>
     </div>
@@ -1360,37 +1370,64 @@
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="profile.jpg" alt="Activity 1">
-                <div class="slide-caption">Community Mentoring</div>
+                <img src="assets/activities/jsa_1.jpg" alt="Activity 1">
+                <div class="slide-caption">Junior Software Academy</div>
               </div>
-              <div class="slide-desc">Mentoring local students in coding workshops and hackathons.</div>
+              <div class="slide-desc">Led the organization and presentation of Junior SW Academy, a CSR initiative to provide basic IT training to underprivileged students.</div>
+            </div>
+          </div>
+          <!-- <div class="slider-item">
+            <div class="slide-content">
+              <div class="slide-image">
+                <img src="assets/activities/jsa_2.jpg" alt="Activity 2">
+                <div class="slide-caption">Junior Software Academy</div>
+              </div>
+              <div class="slide-desc">Hosting the Junior SW Academy Event.</div>
+            </div>
+          </div> -->
+          <div class="slider-item">
+            <div class="slide-content">
+              <div class="slide-image">
+                <img src="assets/activities/jsa_3.jpg" alt="Activity 3">
+                <div class="slide-caption">Event Coordinator</div>
+              </div>
+              <div class="slide-desc">Coordinated and hosted the opening and closing ceremonies of multiple events</div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="icon2.jpg" alt="Activity 2">
-                <div class="slide-caption">Workshop Leader</div>
+                <img src="assets/activities/jsa_4.jpg" alt="Activity 4">
+                <div class="slide-caption">Course Instructor</div>
               </div>
-              <div class="slide-desc">Led technical workshops focused on web development and testing.</div>
+              <div class="slide-desc">Conducted basic coding classes (C language) for underprivileged students as part of CSR initiatives.</div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="excellence.jpg" alt="Activity 3">
-                <div class="slide-caption">Hackathon Organizer</div>
+                <img src="assets/activities/executive.JPG" alt="Activity 4">
+                <div class="slide-caption">Executive Award</div>
               </div>
-              <div class="slide-desc">Organized university hackathons, coordinated mentors and logistics.</div>
+              <div class="slide-desc">Honored with the Executive Award for excellence in planning and managing multiple workshop events. </div>
             </div>
           </div>
           <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
-                <img src="bsc_scholarship.jpg" alt="Activity 4">
-                <div class="slide-caption">Community Events</div>
+                <img src="assets/activities/ecpa_1.jpg" alt="Activity 4">
+                <div class="slide-caption">Intra-ECPA Champion Award</div>
               </div>
-              <div class="slide-desc">Participated in community outreach and donation drives.</div>
+              <div class="slide-desc">Received award as the Champion in the Intra-ECPA Dance Competition, showcasing collaboration and collective performance skills, Club for Performing Arts.</div>
+            </div>
+          </div>
+          <div class="slider-item">
+            <div class="slide-content">
+              <div class="slide-image">
+                <img src="assets/activities/ecpa_2.jpg" alt="Activity 4">
+                <div class="slide-caption">Intra-ECPA Dance Competition</div>
+              </div>
+              <div class="slide-desc">Performed in a team freestyle dance, showcasing an award-winning performance through collective creativity and coordination.</div>
             </div>
           </div>
         </div>
@@ -1399,6 +1436,9 @@
           <button class="slider-dot" onclick="currentSlide(2, 'activities')"></button>
           <button class="slider-dot" onclick="currentSlide(3, 'activities')"></button>
           <button class="slider-dot" onclick="currentSlide(4, 'activities')"></button>
+          <button class="slider-dot" onclick="currentSlide(5, 'activities')"></button>
+          <button class="slider-dot" onclick="currentSlide(6, 'activities')"></button>
+          <!-- <button class="slider-dot" onclick="currentSlide(7, 'activities')"></button> -->
         </div>
       </div>
     </div>
@@ -1519,17 +1559,17 @@
         currentSlide(currentAwardSlide, 'award');
         autoSlide('award', total);
       } else if (type === 'activities') {
-        const total = 4;
+        const total = 6;
         currentActivitiesSlide = ((currentActivitiesSlide - 1 + delta + total) % total) + 1;
         currentSlide(currentActivitiesSlide, 'activities');
         autoSlide('activities', total);
       }
     }
 
-  // Start auto-sliding with 5s interval
-  autoSlide('cert', 5, 5000);
-  autoSlide('award', 3, 5000);
-  autoSlide('activities', 4, 5000);
+  // Start auto-sliding with 6s interval
+  autoSlide('cert', 5, 6000);
+  autoSlide('award', 3, 6000);
+  autoSlide('activities', 6, 6000);
 
     // Intersection Observer for animations
     const observerOptions = {
