--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
           <li class="education-item">
             <div class="edu-left">
               <div class="edu-institution">East West University</div>
-              <div class="edu-sub">MSc. in CSE- <span style="font-style: italic;">CGPA: 3.69/4.00</span><span class="edu-duration-inline">2022 — 2024</span></div>
+              <div class="edu-sub">MSc. in CSE- <span style="font-style: italic;">CGPA: 3.69/4.00</span><span class="edu-duration-inline">2022 — 2023</span></div>
               <div class="edu-sub">BSc. in CSE- <span style="font-style: italic;">CGPA: 3.74/4.00</span><span class="edu-duration-inline">2015 — 2019</span></div>
             </div>
           </li>
@@ -1454,6 +1454,9 @@
             <a class="contact-link" href="mailto:shovanabila@gmail.com" aria-label="Email">
               <i class="fas fa-envelope"></i>
             </a>
+            <a class="contact-link" href="tel:+8801688263892" aria-label="Phone">
+              <i class="fas fa-phone"></i>
+            </a>
             <a class="contact-link" href="https://www.linkedin.com/in/nabila-b-shova" target="_blank" rel="noopener" aria-label="LinkedIn">
               <i class="fab fa-linkedin"></i>
             </a>
@@ -1466,7 +1469,7 @@
           </div>
         </div>
         <div style="display:flex; align-items:center;">
-          <a class="btn btn-secondary btn-small" href="Nabila Bilkis Shova_0.1.pdf" download aria-label="Download CV" style="display:inline-flex; align-items:center; gap:8px;">
+          <a class="btn btn-secondary btn-small" href="assets/Nabila Bilkis Shova_0.1.pdf" download aria-label="Download CV" style="display:inline-flex; align-items:center; gap:8px;">
             <i class="fas fa-download"></i>
             Download CV
           </a>
@@ -1643,7 +1646,7 @@
     // Download CV function
     function downloadCV() {
       const link = document.createElement('a');
-      link.href = 'Nabila Bilkis Shova_0.1.pdf';
+      link.href = 'assets/Nabila Bilkis Shova_0.1.pdf';
       link.download = 'Nabila Bilkis Shova - CV.pdf';
       document.body.appendChild(link);
       link.click();
