--- a/index.html
+++ b/index.html
@@ -1031,20 +1031,7 @@
             <i class="fab fa-instagram"></i>
           </a>
         </div>
-        <!-- <div class="cta-buttons">
-          <a href="Nabila Bilkis Shova_0.1.pdf" download class="btn btn-primary">
-            <i class="fas fa-download"></i>
-            Download CV
-          </a>
-          <a href="#contact" class="btn btn-secondary">
-            <i class="fas fa-envelope"></i>
-            Get In Touch
-          </a>
-        </div> -->
       </div>
-      <!-- <div class="scroll-indicator">
-        <i class="fas fa-chevron-down"></i>
-      </div> -->
     </section>
 
   <!-- Academic Section -->
@@ -1091,8 +1078,8 @@
           <li class="education-item">
             <div class="edu-left">
               <div class="edu-institution">Instructor, Junior Software Academy<span class="edu-duration-inline">2020 — Ongoing</span></div>
-              <div class="edu-sub">Conducted basic coding classes (C language) for children</div>
-              <div class="edu-sub">Arranged interactive coding lessons and contests</div>
+              <div class="edu-sub">Conduct basic coding classes (C language) for children</div>
+              <div class="edu-sub">Arrange interactive coding lessons and contests</div>
             </div>
           </li>
         </ul>
@@ -1310,7 +1297,7 @@
               <div class="slide-desc">Recognized for exceptional performance and contributions to the company from July ~ December 2024.</div>
             </div>
           </div>
-          <div class="slider-item">
+          <!-- <div class="slider-item">
             <div class="slide-content">
               <div class="slide-image">
                 <img src="https://via.placeholder.com/600x400/764ba2/ffffff?text=Award+3" alt="Award 3">
@@ -1318,12 +1305,12 @@
               </div>
               <div class="slide-desc">Special recognition for leadership in student projects and initiatives.</div>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="slider-nav">
           <button class="slider-dot active" onclick="currentSlide(1, 'award')"></button>
           <button class="slider-dot" onclick="currentSlide(2, 'award')"></button>
-          <button class="slider-dot" onclick="currentSlide(3, 'award')"></button>
+          <!-- <button class="slider-dot" onclick="currentSlide(3, 'award')"></button> -->
         </div>
       </div>
       </div>
@@ -1557,7 +1544,7 @@
         currentSlide(currentCertSlide, 'cert');
         autoSlide('cert', total); // reset timer
       } else if (type === 'award') {
-        const total = 3;
+        const total = 2;
         currentAwardSlide = ((currentAwardSlide - 1 + delta + total) % total) + 1;
         currentSlide(currentAwardSlide, 'award');
         autoSlide('award', total);
@@ -1571,7 +1558,7 @@
 
   // Start auto-sliding with 6s interval
   autoSlide('cert', 5, 6000);
-  autoSlide('award', 3, 6000);
+  autoSlide('award', 2, 6000);
   autoSlide('activities', 6, 6000);
 
     // Intersection Observer for animations
